--- a/src/styles/TemplatePage.css
+++ b/src/styles/TemplatePage.css
@@ -3,8 +3,8 @@
     border-top: 3px solid #3A3A3A;
     border-bottom: 3px solid #3A3A3A;
     width: 100vw;
-    padding-bottom: 20vh;
     height: 100vh;
+    overflow: hidden;
 }
 .template-page-inner-wrapper{
     display: flex;
@@ -54,4 +54,7 @@
 .profile-text{
     font-size: 2rem;
     
+}
+.unit-text{
+    font-size: 1.4rem;
 }
